# train

./: .gitignore  README.md  pyproject.toml  schema.json
train_cli/: __init__.py  main.py  models.py  prompting.py  storage.py  validators.py
train_cli/commands/: __init__.py  detail_cmds.py  exercise_cmds.py  list_cmds.py  workout_cmds.py
workout-mode/: workout-mode-pkg.el
workout-mode/lisp/: workout-mode.el
