[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "train-cli"
version = "0.1.0"
description = "CLI to manage resistance workout chronology data"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "jsonschema>=4.21.1",
    "typer>=0.12.3",
    "prompt_toolkit>=3.0.36",
]

[project.scripts]
train = "train_cli.main:app"
